# genshin_map_generator

./: Cargo.toml  README.md  output  urls.txt
src/: api.rs  lib.rs  main.rs  map_gen.rs  point.rs  rect.rs
src/api/: client.rs  models.rs
src/shapes/: point.rs  rect.rs
