[package]
name = "stickers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
http-cache-reqwest = "0.8.0"
image = "0.24.5"
reqwest = {version="0.11.14", features=["json"]}
reqwest-middleware = "0.2.1"
serde = {version="1.0.155", features=["derive"]}
serde_json = "1.0.94"
tokio = { version="1.0", features=["macros", "rt-multi-thread"]} # use "traacing" if you're using tokio-console


[profile.release]
debug = true
opt-level = 3
